--- a/_posts/2021-08-08-aws-s3-post.md
+++ b/_posts/2021-08-08-aws-s3-post.md
@@ -15,36 +15,23 @@ What is S3?
 
 
 
-S3 is abbreviation of Simple Storage Service.
-
-In short, this is a service which provides us a space where we can save files.
-
-One of the most common ways of saving files is running a server using harddisk or SSD.
-
-But as you know such HD or SSD can be broke down as the time goes by.
-
+S3 is an abbreviation of Simple Storage Service.
+In short, this is a service that provides us a space where we can save files.
+One of the most common ways of saving files is running a server using a hard disk or SSD.
+But as you know such HD or SSD can be broken down as time goes by.
 Then our files saved on it would be lost or cracked.
-
 Amazon promises 99.999999999% of durability which is an exact calculated number.
-
-Thats why Amazon provides this service and why people use this service.
-
+That's why Amazon provides this service and why people use this service.
 Also, think about using a private server like 1TB of HD.
-
-At first we usually don't use all of this storage rather we only use small portion of it.
-
+At first, we usually don’t use all of this storage rather we only use a small portion of it.
 But think about how much we paid for this storage.
-
-We payed for 1TB of harddisk machine which is very expensive and it is a very uneffective way of using money.
-
+We paid for 1TB of hard disk machine which is very expensive and it is a very uneffective way of using money.
 S3 provides us to use it more elastically, as they charge only for the actual storage we used.
+And also in some cases, there’s a file such as we don’t have to access very often. Such as a legal document which we have to save for like 5 years. The Original storage services charged us for the same money whether we use it every day or once in a decade. But S3 provides cheaper plans for these kinds of files.
+If you are interested in more details this link would help you understand more about S3.
 
-And also in some cases, there's an file such as we don't have to access very often. Such as an legal document which we have to save it for like 5 years. The Original storage services charged us for same money whether we use it everyday or once in a decade. But S3 provides more cheaper plans for these kind of files. 
-
-If you are interested in more detailes this link would help you understand more about S3.
-
-
-[AWS S3](https://aws.amazon.com/s3/features/?pg=ln&sec=be, "google link")
+aws S3 homepage
+<https://aws.amazon.com/s3/features/?pg=ln&sec=be/>
 
 
 S.J.Son
