--- a/_posts/2021-08-08-aws-s3-post.md
+++ b/_posts/2021-08-08-aws-s3-post.md
@@ -27,7 +27,7 @@ tags:
  S3 provides us to use it more elastically, as they charge only for the actual storage we used.
  And also in some cases, there’s a file such as we don’t have to access very often. Such as a legal document which we have to save for like 5 years. The Original storage services charged us for the same money whether we use it every day or once in a decade. But S3 provides cheaper plans for these kinds of files.   
 
- If you are interested in more details this link would help you understand more about S3.
+ If you are interested in more details, this link would help you understand more about S3.
 
  AWS S3 official website    
  <https://aws.amazon.com/s3/features/?pg=ln&sec=be/>
