--- a/_posts/2021-08-08-aws-s3-post.md
+++ b/_posts/2021-08-08-aws-s3-post.md
@@ -12,7 +12,7 @@ tags:
 
 
 
-
+![s3](/assets/images/s3.png)
  S3 is an abbreviation of Simple Storage Service.
  In short, this is a service that provides us a space where we can save files.
  One of the most common ways of saving files is running a server using a hard disk or SSD.
